Restore old TR translations for `jslirola-login2seeplus`.

--- a/translations/tr/jslirola-login2seeplus.json
+++ b/translations/tr/jslirola-login2seeplus.json
@@ -9,6 +9,8 @@
         "admin": {
             "title": "Login2SeePlus",
             "hide": "Gizle",
+            "link": "Bağlantılar",
+            "image": "Resimler",
             "code": "Kodlar",
             "post": {
                 "title": "Bu uzunluğu aşan içeriği gizle (<em>-1</em> hepsini gösterir)",
