--- a/translations/fr/askvortsov-checklist.json
+++ b/translations/fr/askvortsov-checklist.json
@@ -2,12 +2,12 @@
     "askvortsov-checklist": {
         "admin": {
             "settings": {
-                "cross_out_completed_items": ""
+                "cross_out_completed_items": "Rayer les éléments de la liste de contrôle remplis?"
             }
         },
         "forum": {
             "composer": {
-                "checklist_tooltip": ""
+                "checklist_tooltip": "Activer la liste de contrôle"
             }
         }
     }
