Importing "clarkwinkelmann-author-change" component from "https://raw.githubusercontent.com/rooaaar/lang-french-extended/master/locale/clarkwinkelmann-author-change.yml".

--- a/translations/fr/clarkwinkelmann-author-change.json
+++ b/translations/fr/clarkwinkelmann-author-change.json
@@ -2,27 +2,27 @@
     "clarkwinkelmann-author-change": {
         "forum": {
             "controls": {
-                "edit": ""
+                "edit": "Modifier l’auteur"
             },
             "modal": {
-                "title-post": "",
-                "title-discussion": "",
-                "user": "",
-                "created_at": "",
-                "edited_at": "",
-                "submit": "",
-                "cancel": ""
+                "title-post": "Modifier l’auteur du message",
+                "title-discussion": "Modifier l’auteur de la discussion",
+                "user": "Auteur",
+                "created_at": "Temps de création",
+                "edited_at": "Modifier l’heure",
+                "submit": "Sauvegarder",
+                "cancel": "Annuler"
             },
             "search": {
-                "placeholder": "",
-                "type-more": "",
-                "no-results": ""
+                "placeholder": "Rechercher des utilisateurs",
+                "type-more": "Tapez 3 caractères pour effectuer une recherche dans la base de données",
+                "no-results": "Aucun résultat"
             }
         },
         "admin": {
             "permissions": {
-                "edit-user": "",
-                "edit-date": ""
+                "edit-user": "Mettre à jour la discussion et l'auteur du message",
+                "edit-date": "Mettre à jour la discussion et la date de publication"
             }
         }
     }
