--- a/translations/fr/clarkwinkelmann-who-read.json
+++ b/translations/fr/clarkwinkelmann-who-read.json
@@ -2,52 +2,52 @@
     "clarkwinkelmann-who-read": {
         "forum": {
             "tooltip": {
-                "last-read-at": "",
-                "last-read-at-behind": "",
-                "last-read-at-up-to-date": ""
+                "last-read-at": "{username} a lu {ago}",
+                "last-read-at-behind": "{username} a lu pour la dernière fois {ago} et est derrière",
+                "last-read-at-up-to-date": "{username} a lu le dernier message {ago}"
             },
             "more": {
-                "show": "",
-                "info": ""
+                "show": "Afficher {count} en plus",
+                "info": "Et {count} en plus"
             },
             "footer": {
-                "read-this-post": "",
-                "read-no-further": "",
-                "read-to-end": ""
+                "read-this-post": "{0} Personne n’a lu ce message|{1} Un utilisateur a lu ce message|]1,Inf] {count} ont lu ce message",
+                "read-no-further": "{0} Tout le monde a lu plus loin|{1} Un utilisateur n’a pas lu plus loin|]1,Inf] {count} n’ont pas lu plus loin",
+                "read-to-end": "{0} Personne n’a lu jusqu’au bout|{1} Un utilisateur a lu jusqu’à la fin|]1,Inf] {count} utilisateurs ont lu jusqu’à la fin"
             },
             "controls": {
-                "set-unread": "",
-                "remove-unread": ""
+                "set-unread": "Marquer comme non lu",
+                "remove-unread": "Supprimer les non lus"
             },
             "badges": {
-                "following": "",
-                "ignoring": "",
-                "unread": ""
+                "following": "=> flarum-subscriptions.forum.badge.following_tooltip",
+                "ignoring": "=> flarum-subscriptions.forum.badge.ignoring_tooltip",
+                "unread": "Marqué comme non lu"
             },
             "modal": {
-                "title": "",
-                "up-to-this-post": "",
-                "past-this-post": "",
-                "to-the-end": "",
-                "behind": ""
+                "title": "Lecteurs",
+                "up-to-this-post": "Utilisateurs ayant lu ce message",
+                "past-this-post": "Utilisateurs ayant lu après ce message",
+                "to-the-end": "Utilisateurs qui ont lu jusqu’à la fin",
+                "behind": "Utilisateurs qui n’ont pas lu jusqu’à la fin"
             }
         },
         "admin": {
             "permissions": {
-                "see-read": "",
-                "see-subscription": "",
-                "see-unread": "",
-                "mark-unread": ""
+                "see-read": "Voir le statut de lecture",
+                "see-subscription": "Voir le statut de l’abonnement",
+                "see-unread": "Voir le statut non lu des autres utilisateurs",
+                "mark-unread": "Marquer les discussions comme non lues par soi-même"
             },
             "settings": {
-                "show-in-discussion-list": "",
-                "show-in-hero": "",
-                "show-between-posts": "",
-                "show-count-of-readers-who-stopped": "",
-                "hide-when-behind": "",
-                "max-visible": "",
-                "unread-icon": "",
-                "only-groups": ""
+                "show-in-discussion-list": "Afficher les lecteurs dans la liste de discussion",
+                "show-in-hero": "Afficher les lecteurs dans le hero de discussion",
+                "show-between-posts": "Afficher le statut de lecture entre les messages",
+                "show-count-of-readers-who-stopped": "Afficher le nombre d’utilisateurs qui ont arrêté de lire au lieu du total lu entre les messages",
+                "hide-when-behind": "Masquer complètement un utilisateur s’il se trouve derrière un certain nombre de publications",
+                "max-visible": "Nombre maximum d’utilisateurs à afficher avant \"en savoir plus\"",
+                "unread-icon": "Icône pour le badge non lu",
+                "only-groups": "Afficher uniquement le statut de lecture des utilisateurs appartenant à ces groupes"
             }
         }
     }
