--- a/translations/fr/datitisev-dashboard.json
+++ b/translations/fr/datitisev-dashboard.json
@@ -3,29 +3,29 @@
         "admin": {
             "dashboard": {
                 "months": {
-                    "january": "",
-                    "february": "",
-                    "march": "",
-                    "april": "",
-                    "may": "",
-                    "june": "",
-                    "july": "",
-                    "august": "",
-                    "september": "",
-                    "october": "",
-                    "november": "",
-                    "december": ""
+                    "january": "Janvier",
+                    "february": "Février",
+                    "march": "Mars",
+                    "april": "Avril",
+                    "may": "Mai",
+                    "june": "Juin",
+                    "july": "Juillet",
+                    "august": "Août",
+                    "september": "Septembre",
+                    "october": "Octobre",
+                    "november": "Novembre",
+                    "december": "Décembre"
                 },
                 "graph": {
-                    "users": "",
-                    "discussions": "",
-                    "posts": ""
+                    "users": "Utilisateurs",
+                    "discussions": "Discussions",
+                    "posts": "Messages"
                 },
                 "updates": {
-                    "check_button": "",
-                    "checking": "",
-                    "available": "",
-                    "none": ""
+                    "check_button": "Vérifier les mises à jour des extensions",
+                    "checking": "Vérification des mises à jour...",
+                    "available": "{count} Mise à jour disponible|{count} Mises à jour disponibles",
+                    "none": "Aucune mise à jour trouvée"
                 }
             }
         }
