--- a/translations/fr/fof-amazon-affiliation.json
+++ b/translations/fr/fof-amazon-affiliation.json
@@ -3,16 +3,16 @@
         "admin": {
             "settings": {
                 "title": {
-                    "modal": "",
-                    "tags": ""
+                    "modal": "Paramètres d’affiliation Amazon",
+                    "tags": "Balises d’affiliation"
                 },
                 "field": {
-                    "keep-existing-tag": "",
-                    "keep-existing-tag-help": "",
-                    "remove-tag-if-unhandled": "",
-                    "remove-tag-if-unhandled-help": "",
-                    "tag": "",
-                    "tag-placeholder": ""
+                    "keep-existing-tag": "Conserver les balises d’affiliation Amazon des liens d’origines au lieu de les remplacer",
+                    "keep-existing-tag-help": "Par défaut, toute balise existante dans le lien d’origine est remplacée par la balise que vous définissez ci-dessous.",
+                    "remove-tag-if-unhandled": "Supprimer les balises d’affiliation Amazon sur les liens Amazon non couverts",
+                    "remove-tag-if-unhandled-help": "Par défaut, les liens non couverts sont laissés tels quels, y compris leur balise éventuelle.",
+                    "tag": "{name} (amazon.{domain})",
+                    "tag-placeholder": "Laissez vide pour ne pas couvrir ces liens"
                 }
             }
         }
