--- a/translations/fr/fof-analytics.json
+++ b/translations/fr/fof-analytics.json
@@ -3,31 +3,31 @@
         "admin": {
             "popup": {
                 "section": {
-                    "googleAnalytics": "",
-                    "piwik": ""
+                    "googleAnalytics": "Google Analytics",
+                    "piwik": "Piwik"
                 },
                 "field": {
-                    "statusGoogle": "",
-                    "optTrackingCode": "",
-                    "googleTrackingCode": "",
-                    "googleGTMCode": "",
-                    "statusPiwik": "",
-                    "piwikUrl": "",
-                    "piwikSiteId": "",
-                    "piwikTrackSubdomain": "",
-                    "piwikPrependDomain": "",
-                    "piwikHideAliasUrl": "",
-                    "piwikAliasUrl": "",
-                    "piwikTrackAccounts": "",
-                    "piwikAuthToken": ""
+                    "statusGoogle": "Activer Google Analytics",
+                    "optTrackingCode": "Optimiser le code de suivi (facultatif)",
+                    "googleTrackingCode": "Code de suivi",
+                    "googleGTMCode": "ID de code GTM (facultatif)",
+                    "statusPiwik": "Activer Piwik",
+                    "piwikUrl": "Nom de domaine Piwik ou URL",
+                    "piwikSiteId": "ID du site",
+                    "piwikTrackSubdomain": "Suivre les visiteurs dans tous les sous-domaines de Flarum",
+                    "piwikPrependDomain": "Ajouter le nom de domaine au titre de la page lors du suivi",
+                    "piwikHideAliasUrl": "Dans le rapport « Liens externes », masquer les clics sur les URL d’alias connues",
+                    "piwikAliasUrl": "URL d’alias",
+                    "piwikTrackAccounts": "Suivre les comptes d’utilisateurs individuels",
+                    "piwikAuthToken": "Jeton d’authentification"
                 },
                 "placeholder": {
-                    "piwikAuthToken": ""
+                    "piwikAuthToken": "Remplissez ce jeton pour activer un onglet statistiques de Piwik dans le panneau d’administration.\nVous pouvez trouver le jeton dans « Paramètres > Personnel > Jeton d’authentification de l’API ».\n"
                 },
                 "trackAccounts": {
-                    "none": "",
-                    "username": "",
-                    "email": ""
+                    "none": "Ne pas suivre",
+                    "username": "Suivre par nom d’utilisateur",
+                    "email": "Suivre par courriel"
                 }
             }
         }
