--- a/translations/fr/fof-best-answer.json
+++ b/translations/fr/fof-best-answer.json
@@ -2,54 +2,54 @@
     "fof-best-answer": {
         "admin": {
             "permissions": {
-                "best_answer": "",
-                "best_answer_not_own_discussion": ""
+                "best_answer": "Sélectionnez la meilleure réponse (sur sa propre discussion)",
+                "best_answer_not_own_discussion": "Sélectionnez la meilleure réponse (pas sur sa propre discussion)"
             },
             "settings": {
                 "label": {
-                    "general": "",
-                    "reminders": "",
-                    "advanced": "",
-                    "reminders_notice": ""
+                    "general": "Général",
+                    "reminders": "Rappels",
+                    "advanced": "Avancé",
+                    "reminders_notice": "Pour que les rappels fonctionnent correctement, vous devez avoir configuré correctement le planificateur Flarum."
                 },
-                "allow_select_own_post": "",
-                "select_best_answer_reminder_days": "",
-                "schedule_on_one_server": "",
-                "schedule_stop_overnight": "",
-                "schedule_log_output": "",
-                "remind_tag_ids": "",
-                "use_alt_ui": ""
+                "allow_select_own_post": "Autoriser les utilisateurs à sélectionner leurs propres publications",
+                "select_best_answer_reminder_days": "Rappelez aux utilisateurs de sélectionner une meilleure réponse après X jours",
+                "schedule_on_one_server": "Utilisez la directive 'onOneServer ()' pour le planificateur de tâches (nécessite Redis / Memcache)",
+                "schedule_stop_overnight": "Empêcher le planificateur de rappel de s’exécuter pendant les heures non sociales (21h - 8h heure du serveur)",
+                "schedule_log_output": "Ajouter la sortie du planificateur au stockage des journaux",
+                "remind_tag_ids": "Pour restreindre les rappels à des balises particulières, entrez les ID de balise ici (séparés par des virgules)",
+                "use_alt_ui": "Utiliser une disposition alternative (bouton de meilleur réponse dans le pied de page)"
             }
         },
         "forum": {
-            "answered_badge": "",
-            "this_best_answer": "",
-            "remove_best_answer": "",
-            "best_answer_button": "",
-            "best_answer_label": "",
+            "answered_badge": "Répondue",
+            "this_best_answer": "Sélectionner la meilleure réponse",
+            "remove_best_answer": "Désélectionner la meilleure réponse",
+            "best_answer_button": "Meilleure réponse",
+            "best_answer_label": "sélectionnée par <a>{username}</a> {time_set}",
             "errors": {
-                "mismatch": ""
+                "mismatch": "Le message sélectionné n’existe pas dans cette discussion"
             },
             "notification": {
-                "best_answer_in_discussion": "",
-                "content": "",
-                "awarded": "",
+                "best_answer_in_discussion": "{username} a défini la meilleure réponse dans cette discussion",
+                "content": "Veuillez sélectionner la meilleure réponse si une réponse a été apportée à votre question",
+                "awarded": "Votre message a été défini comme la meilleure réponse par {username}",
                 "preferences": {
-                    "awarded_best_answer": "",
-                    "best_answer_in_discussion": ""
+                    "awarded_best_answer": "Quand quelqu’un définit mon message comme meilleure réponse",
+                    "best_answer_in_discussion": "Lorsqu’une meilleure réponse est donnée dans une discussion à laquelle j’ai participé"
                 }
             }
         },
         "email": {
             "subject": {
-                "awarded": "",
-                "ba-set": "",
-                "select": ""
+                "awarded": "Votre message a été défini comme la meilleure réponse par {display_name}",
+                "ba-set": "Une meilleure réponse a été définie par {display_name}",
+                "select": "Avez-vous réussi à obtenir une réponse à votre question?"
             },
             "body": {
-                "awarded": "",
-                "ba-set": "",
-                "select": ""
+                "awarded": "Salut {recipient_display_name},\n Excellent travail, {actor_display_name} vient de définir votre message comme la meilleure réponse dans la discussion \"{discussion_title}\". Merci de votre aide.\n Consultez-le ici: {discussion_url}\n",
+                "ba-set": "Salut {recipient_display_name},\n {actor_display_name} vient de définir une meilleure réponse dans la discussion \"{discussion_title}\", à laquelle vous avez participé.\n Découvrez-le: {discussion_url}\n",
+                "select": "Salut {recipient_display_name},\n À présent, vous devriez avoir beaucoup de réponses à votre question - «{discussion_title}». J’espère que l’un d'eux vous a aidé à résoudre votre problème.\n Si tel est le cas, il serait vraiment utile pour les futurs membres si vous pouviez définir la meilleure réponse à votre question. Cela aidera les personnes ayant le même problème à trouver la réponse dont elles ont besoin, et c’est aussi un grand merci aux membres qui vous ont aidé. Ils donnent de leur temps volontairement, c’est donc agréable de leur faire savoir qu’ils vont bien.\n Consultez la discussion ici: {discussion_url} et sélectionnez le message le plus approprié comme meilleure réponse.\n Merci!\n"
             }
         }
     }
