Importing "fof-cookie-consent" component from "https://raw.githubusercontent.com/rooaaar/lang-french-extended/master/locale/fof-cookie-consent.yml".

--- a/translations/fr/fof-cookie-consent.json
+++ b/translations/fr/fof-cookie-consent.json
@@ -2,26 +2,26 @@
     "fof-cookie-consent": {
         "admin": {
             "settings": {
-                "configuration_title": "",
-                "consentText": "",
-                "buttonText": "",
-                "configuration_button_title": "",
-                "learnMoreLinkText": "",
-                "learnMoreLinkUrl": "",
-                "theme_title": "",
-                "ccTheme": "",
-                "theme_popup_title": "",
-                "backgroundColor": "",
-                "textColor": "",
-                "theme_dismiss_title": "",
-                "buttonBackgroundColor": "",
-                "buttonTextColor": "",
+                "configuration_title": "Options de configuration",
+                "consentText": "Contenu du message",
+                "buttonText": "Texte du bouton de validation",
+                "configuration_button_title": "Bouton En savoir plus",
+                "learnMoreLinkText": "Texte",
+                "learnMoreLinkUrl": "Lien",
+                "theme_title": "Options de thème",
+                "ccTheme": "Thème",
+                "theme_popup_title": "Couleurs du Popup",
+                "backgroundColor": "Arrière-plan",
+                "textColor": "Texte",
+                "theme_dismiss_title": "Couleur du bouton de validation",
+                "buttonBackgroundColor": "Arrière-plan",
+                "buttonTextColor": "Texte",
                 "themes": {
-                    "blocky": "",
-                    "edgeless": "",
-                    "classic": "",
-                    "custom": "",
-                    "no_css": ""
+                    "blocky": "Blocky",
+                    "edgeless": "Sans bord",
+                    "classic": "Classique",
+                    "custom": "Personnalisé",
+                    "no_css": "Aucun CSS"
                 }
             }
         }
