Importing "fof-custom-footer" component from "https://raw.githubusercontent.com/rooaaar/lang-french-extended/master/locale/fof-custom-footer.yml".

--- a/translations/fr/fof-custom-footer.json
+++ b/translations/fr/fof-custom-footer.json
@@ -2,10 +2,10 @@
     "fof-custom-footer": {
         "admin": {
             "settings": {
-                "css": "",
-                "height": "",
-                "js": "",
-                "text": ""
+                "css": "CSS",
+                "height": "Hauteur du pied de page",
+                "js": "JS",
+                "text": "Texte du pied de page"
             }
         }
     }
