Importing "fof-default-group" component from "https://raw.githubusercontent.com/rooaaar/lang-french-extended/master/locale/fof-default-group.yml".

--- a/translations/fr/fof-default-group.json
+++ b/translations/fr/fof-default-group.json
@@ -2,7 +2,7 @@
     "fof-default-group": {
         "admin": {
             "settings": {
-                "info": ""
+                "info": "Vous pouvez sélectionner ci-dessous le groupe auquel affecter un utilisateur lorsque son compte est activé."
             }
         }
     }
