--- a/translations/fr/fof-disposable-emails.json
+++ b/translations/fr/fof-disposable-emails.json
@@ -1,7 +1,7 @@
 {
     "fof-email-checker": {
         "error": {
-            "disposable_email_message": ""
+            "disposable_email_message": "Vous ne pouvez pas utiliser un email jetable."
         }
     }
 }
