--- a/translations/fr/fof-doorman.json
+++ b/translations/fr/fof-doorman.json
@@ -2,55 +2,55 @@
     "fof-doorman": {
         "forum": {
             "email": {
-                "subject": "",
-                "body": ""
+                "subject": "Invitation à nous rejoindre",
+                "body": "Bonjour,\n Vous avez été invité à vous inscrire sur {forum}.\n Lorsque vous êtes prêt à créer votre compte, cliquez simplement sur le lien suivant et entrez le code lors de votre inscription:\n URL: {url}\n Code d'invitation: {code}\n Si vous avez reçu ce message par erreur, veuillez ignorer cet e-mail.\n"
             },
             "sign_up": {
-                "invalid_doorkey": "",
-                "doorkey_required": "",
-                "doorman_placeholder": "",
-                "doorman_placeholder_optional": ""
+                "invalid_doorkey": "Le code d’invitation que vous avez entré n’est pas valide.",
+                "doorkey_required": "S’il vous plaît entrer un code d’invitation.",
+                "doorman_placeholder": "Code d’invitation",
+                "doorman_placeholder_optional": "Code d’invitation (optionnel)"
             }
         },
         "admin": {
             "modal": {
-                "title": "",
-                "group": "",
-                "help": "",
-                "placeholder": "",
-                "invalid_emails": "",
-                "max_use_conflict": "",
-                "send": "",
-                "success": ""
+                "title": "Envoyer des codes d’invitation",
+                "group": "Envoi des invitations pour le groupe {group}",
+                "help": "Accepte une liste séparée par des virgules, des espaces ou des espaces par des virgules. Tapez un e-mail individuel ou collez une liste, puis appuyez sur espace pour l’ajouter.",
+                "placeholder": "Saisissez vos e-mails ici",
+                "invalid_emails": "Les e-mails suivants ne sont pas valides: {emails}",
+                "max_use_conflict": "Le nombre d’e-mails dépasse le nombre maximal d’utilisations de ce code.",
+                "send": "Envoyer les emails",
+                "success": "E-mails envoyés avec succès"
             },
-            "invalid_doorkey": "",
-            "doorkey_required": "",
+            "invalid_doorkey": "Le code d’invitation que vous avez fourni n’est pas valide.",
+            "doorkey_required": "Vous devez fournir un code d’invitation",
             "nav": {
-                "desc": ""
+                "desc": "Créer des codes d’invitation pour que les utilisateurs puissent s’inscrire et être assignés à un groupe"
             },
             "page": {
-                "title": "",
+                "title": "Doorman",
                 "doorkey": {
-                    "used_times": "",
-                    "title": "",
+                    "used_times": "1 utilisation restante|{remaining} utilisations restantes",
+                    "title": "Codes d’invitation",
                     "help": {
-                        "key": "",
-                        "group": "",
-                        "max": "",
-                        "activates": ""
+                        "key": "Clé: Code que l’utilisateur saisira lors de son inscription.",
+                        "group": "Groupe: Le groupe auquel l’utilisateur sera ajouté lors de l’inscription.",
+                        "max": "Utilisations maximum: Le nombre maximum d’utilisations du code, définissez-le sur 0 pour un nombre illimité d’utilisations",
+                        "activates": "Activation de l’utilisateur: Active automatiquement l’utilisateur lors de son inscription."
                     },
-                    "warning": "",
-                    "key": "",
-                    "max_uses": "",
+                    "warning": "Ce code d’invitation a déjà été utilisé trop de fois.",
+                    "key": "Clé",
+                    "max_uses": "Utilisations maximum",
                     "heading": {
-                        "key": "",
-                        "group": "",
-                        "activate": "",
-                        "max_uses": ""
+                        "key": "Clé",
+                        "group": "Groupe",
+                        "activate": "Activation de l’utilisateur",
+                        "max_uses": "Utilisations maximum"
                     },
                     "allow-public": {
-                        "title": "",
-                        "switch-label": ""
+                        "title": "Autoriser l’inscription publique",
+                        "switch-label": "Rendre le code d’invitation facultatif lors de l’inscription"
                     }
                 }
             }
